# python-cloud-test

./: README.md  greeter.py  handler.py  pyproject.toml  utils.py
.github/workflows/: deploy.yml
